// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly 1`] = `
<View
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      {
        "justifyContent": "center",
      },
      [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "backgroundColor": "#808080",
        },
        [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "height": 80,
          },
          {
            "width": 80,
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    />
    <View
      style={
        [
          {
            "paddingBottom": 60,
            "paddingLeft": 60,
            "paddingRight": 60,
            "paddingTop": 60,
          },
          {
            "marginLeft": 12,
            "marginRight": 12,
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    />
    <View
      style={
        [
          {
            "height": 20,
          },
          {
            "width": 64,
          },
          {
            "backgroundColor": "#FFD700",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`Center renders correctly 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "alignItems": "center",
      },
      [
        undefined,
        undefined,
      ],
    ]
  }
/>
`;

exports[`Screen renders correctly 1`] = `
<View
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      {
        "backgroundColor": "#FFFCF9",
      },
      [
        undefined,
        undefined,
      ],
    ]
  }
/>
`;

exports[`Separator renders horizontal correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#D3D3D3",
      },
      [
        undefined,
        [
          {
            "height": 0.5,
          },
          undefined,
        ],
      ],
    ]
  }
/>
`;

exports[`Separator renders vertical correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#D3D3D3",
      },
      [
        undefined,
        [
          {
            "width": 0.5,
          },
          undefined,
        ],
      ],
    ]
  }
/>
`;
